Added buttons instead of checkboxes to reduce code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <div class="navigation">
             <h1>PUNK BEER</h1>
             <div class="inputWrapper">
-                <label for="firstABV">0,5% – 3,5%</label>
+                <button id="firstABV">0,5% – 3,5%</button>
+                <button id="secondABV">3,6% – 5,2%</button>
+                <button id="thirdABV">5,3% – 12%</button>
+                <button id="fourthABV">12% ></button>
+                <button id="showAll">SHOW ALL</button>
+                <!-- <label for="firstABV"></label>
                 <input type="checkbox" name="firstABV" id="firstABV">
 
                 <label for="secondABV">3,6% – 5,2%</label>
@@ -22,7 +27,7 @@
                 <input type="checkbox" name="thirdABV" id="thirdABV">
 
                 <label for="fourthABV">12% ></label>
-                <input type="checkbox" name="fourthABV" id="fourthABV">
+                <input type="checkbox" name="fourthABV" id="fourthABV"> -->
             </div>
         </div>
     </header>
