Added SCSS and .gitignore

--- a/index.html
+++ b/index.html
@@ -6,34 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Punk Beer</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="navigation">
+            <img src="images/punk_beer.png" alt="Punk Beer" />
             <h1>PUNK BEER</h1>
-            <div class="inputWrapper">
+            <div class="buttonWrapper">
                 <button id="firstABV">0,5% – 3,5%</button>
                 <button id="secondABV">3,6% – 5,2%</button>
                 <button id="thirdABV">5,3% – 12%</button>
                 <button id="fourthABV">12% ></button>
                 <button id="showAll">SHOW ALL</button>
-                <!-- <label for="firstABV"></label>
-                <input type="checkbox" name="firstABV" id="firstABV">
-
-                <label for="secondABV">3,6% – 5,2%</label>
-                <input type="checkbox" name="secondABV" id="secondABV">
-
-                <label for="thirdABV">5,3% – 12%</label>
-                <input type="checkbox" name="thirdABV" id="thirdABV">
-
-                <label for="fourthABV">12% ></label>
-                <input type="checkbox" name="fourthABV" id="fourthABV"> -->
             </div>
         </div>
     </header>
     <main>
         <div id="beerWrapper">
-
+            <!-- This is where JavaScript does it's magic -->
         </div>
     </main>
     <script src="js/main.js"></script>
