Changed CSS with buttons outside the navigation bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <div class="navigation">
             <img src="images/punk_beer.png" alt="Punk Beer" />
             <h1>PUNK BEER</h1>
+        </div>
+    </header>
+    <main>
+            <p>Sort beer by ABV (alcohol by volume):</p>
             <div class="buttonWrapper">
                 <button id="firstABV">0,5% – 3,5%</button>
                 <button id="secondABV">3,6% – 5,2%</button>
@@ -20,9 +24,6 @@
                 <button id="fourthABV">12% ></button>
                 <button id="showAll">SHOW ALL</button>
             </div>
-        </div>
-    </header>
-    <main>
         <div id="beerWrapper">
             <!-- This is where JavaScript does it's magic -->
         </div>
