Trying out 'read more'-button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Punk Beer</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
@@ -16,14 +17,14 @@
         </div>
     </header>
     <main>
-            <p>Sort beer by ABV (alcohol by volume):</p>
-            <div class="buttonWrapper">
-                <button id="firstABV">0,5% – 3,5%</button>
-                <button id="secondABV">3,6% – 5,2%</button>
-                <button id="thirdABV">5,3% – 12%</button>
-                <button id="fourthABV">12% ></button>
-                <button id="showAll">SHOW ALL</button>
-            </div>
+        <p>Sort beer by ABV (alcohol by volume):</p>
+        <div class="buttonWrapper">
+            <button id="firstABV">0,5% – 4,5%</button>
+            <button id="secondABV">4,5% – 7%</button>
+            <button id="thirdABV">7% – 12%</button>
+            <button id="fourthABV">12% ></button>
+            <button id="showAll">SHOW ALL</button>
+        </div>
         <div id="beerWrapper">
             <!-- This is where JavaScript does it's magic -->
         </div>
