Added cool loading animation while waiting for API to get fetched

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <button id="showAll">SHOW ALL</button>
         </div>
         <div id="beerWrapper">
-            <!-- This is where JavaScript does it's magic -->
+            <div class="loadingWrapper">
+                <img id="loading" src="images/punk_beer.png" alt="Loading" />
+                <p>Loading...</p>
+            </div>   
         </div>
     </main>
     <script src="js/main.js"></script>
