Added an input field that searches for food pairing, not fully functional yet

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <button id="fourthABV">12% ></button>
             <button id="showAll">SHOW ALL</button>
         </div>
+        <label for="searchFood">Search food pairing:</label>
+        <input type="text" id="searchFood" name="searchFood">
         <div id="beerWrapper">
             <div class="loadingWrapper">
                 <img id="loading" src="images/punk_beer.png" alt="Loading" />
