Added a small footer and changed food pairings to ul > li, also fixed the food pairing search so it works (better)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             </div>   
         </div>
     </main>
+    <footer>
+        <h4>PUNK BEER</h4>
+        <p>This is a simple application where you can sort Brewdog beers by alcohol
+           by volume and search for food pairing. Cheers!</p>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
