--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <div class="navigation">
-            <img src="images/punk_beer.png" alt="Punk Beer Bottle" />
-            <h1>PUNK BEER</h1>
+            <a href="index.html"><img src="images/punk_beer.png" alt="Punk Beer Bottle" />
+            <h1>PUNK BEER</h1></a>
         </div>
     </header>
     <main>
